apps/terminals/base/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: open-webui-to-orchestrator
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: open-webui
      podSelector:
        matchLabels:
          app.kubernetes.io/component: open-webui
          app.kubernetes.io/instance: open-webui
          app.kubernetes.io/name: open-webui
  podSelector:
    matchLabels:
      app.kubernetes.io/component: orchestrator
      app.kubernetes.io/instance: terminals
      app.kubernetes.io/name: terminals-orchestrator
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orchestrator-to-terminal
spec:
  ingress:
  - ports:
    - port: 8000
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: terminals
      podSelector:
        matchLabels:
          app.kubernetes.io/component: orchestrator
          app.kubernetes.io/instance: terminals
          app.kubernetes.io/name: terminals-orchestrator
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: open-terminal
      app.kubernetes.io/name: open-terminal
  policyTypes:
  - Ingress
---
